sfdx-spa-alcala/force-app/main/default/objects/Enrollment_not_used__c/Enrollment_not_used__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture a students enrollment in a grade at their school. Summary data for the enrollment is captured in this object.</description>
    <label>Enrollment_not_used</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Enrollment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments_not_used</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>