sfdx-spa-alcala/force-app/main/default/objects/Enrollment_not_used__c/fields/Class_Standing__c.field-meta.xml
<CustomField>
    <fullName>Class_Standing__c</fullName>
    <label>Class Standing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elementary School</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Middle School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>