sfdx-spa-alcala/force-app/main/default/objects/Enrollment_not_used__c/fields/Eligible_to_Enroll__c.field-meta.xml
<CustomField>
    <fullName>Eligible_to_Enroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible to Enroll</label>
    <type>Checkbox</type>
</CustomField>