sfdx-spa-alcala/force-app/main/default/objects/Enrollment_not_used__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <label>GPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>