sfdx-spa-alcala/force-app/main/default/objects/Enrollment_not_used__c/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grade Level</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>