sfdx-spa-alcala/force-app/main/default/objects/Enrollment_not_used__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Program_Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>