sfdx-spa-alcala/force-app/main/default/objects/Enrollment_not_used__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>